opam-version: "2.0"
name: "orandforest"
authors: "Théophile Bastian <contact@tobast.fr> and Noémie Fong"
maintainer: "contact@tobast.fr"
homepage: "https://github.com/tobast/ORandForest"
bug-reports: "https://github.com/tobast/ORandForest/issues"
dev-repo: "git+https://github.com/tobast/ORandForest.git"
license: "LGPL"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {build}
  "oc45"
  "parmap"
]
